<resources>
    <string name="app_name">Roam</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="text_EmergencyContactTODO">Emergency Contact TO DO</string>
    <string name="text_ItineraryTODO">Itinery TO DO</string>
    <string name="text_MyGroupTODO">My Group TO DO</string>
    <string name="text_WhereAmITODO">Where Am I ? TO DO</string>
    <string name="text_MyNotesTODO">My Notes TO DO</string>
    <string name="text_TranslatorTODO">Translator TO DO</string>

    <string name="text_EmergencyContact">Emergency Contact</string>
    <string name="text_Itinery">Itinery</string>
    <string name="text_MyGroup">My Group</string>
    <string name="text_WhereAmI">Where Am I ?</string>
    <string name="text_MyNotes">My Notes</string>
    <string name="text_Translator">Translator</string>

    <string name="NOT_IMPLEMENTED">NOT IMPLEMENTED</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
